--- a/serverless.yml
+++ b/serverless.yml
@@ -83,3 +83,15 @@ functions:
                 cors: true
                 authorizer:
                     arn: arn:aws:cognito-idp:us-west-2:596310897400:userpool/us-west-2_IJDrpYgOj
+    # Defines an HTTP API endpoint that calls the main function in delete.js
+    # - path: url path is /notes/{id}
+    # - method: DELETE request
+    delete:
+        handler: delete.main
+        events:
+            - http:
+                path: notes/{id}
+                method: delete
+                cors: true
+                authorizer:
+                    arn: arn:aws:cognito-idp:us-west-2:596310897400:userpool/us-west-2_IJDrpYgOj
